fixed spacing

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .header {
 	font-family: 'Great Vibes', Helvetica, sans-serif;
 	font-weight: bold;
+	font-size: 35;
 	color: #fd8383;
 	margin: 0;
 	padding-top: 20;
